add sourcelink configuration for debugging support

--- a/server/SocialLibrary.API/appsettings.json
+++ b/server/SocialLibrary.API/appsettings.json
@@ -10,7 +10,9 @@
   },
   "GoogleBooks": {
     "ApiKey": "AIzaSyAYS1O44dul5RERotqEA9ESL647gjPSGSY"
-    
+  },
+  "Tmdb": {
+    "ApiKey": "ec47c8499be29f5ae01de44bfe781680"
   },
   "Logging": {
     "LogLevel": { "Default": "Information" }
